Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-3859

Windows .res files do not get recompiled, if included files change

    XMLWordPrintable

Details

    • 42d32e468aa89631161884f07b3e25814c47b879 (qt/qtbase/wip/qt6)

    Description

      I have an .rc file containing some Windows specific resources for my application.
      It is included in the project file "RC_FILE += resources.rc"
      This resource file includes another file, called revision.inc, which is being generated automatically and includes the SVN revision number, etc.

      When the included revision.inc file changes, the resources.rc should recompile to produce an up to date .res file
      But the .res file does not regenerate.
      Native Visual Studio projects handle files included into resource scripts correctly.

      When you check the Makefile generated by QMake. The .res file only depends on the .rc file. Any files included into the .rc file are ignored.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            xcm Martin Petersson (Inactive)
            Votes:
            6 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes